# texas

./: CMakeLists.txt  Makefile  poker.cpp  poker.h  poker.test.cpp  table-html.sh  table.sh  test.cpp
etc/: rasterize.js
include/: mtseq.h  poker.h  printer.h  strategy.h  table.h
src/: dat2range.cpp  dump.cpp  poker.cpp  poker.test.cpp  printer.cpp  sim.cpp  sim_allcall.cpp  sim_hu.cpp  sim_range.cpp  strategy.cpp  table.cpp
strategies/: tight2_aggressive  tight_aggressive
table/: calling_station  tag  tag2
